[package]
name = "thumbor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bytes = "1.10.1"
image = { version = "0.25.6", features = ["jpeg", "png"] }
imageproc = "0.25.0"
lazy_static = "1.5.0"
prost = "0.13.5"
reqwest = { version = "0.12.15", features = ["json"] }

[build-dependencies]
prost-build = "0.13.5"
