[package]
name = "thumbor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
image = { version = "0.25.6", features = ["jpeg", "png"] }
imageproc = "0.25.0"
lazy_static = "1.5.0"
lru = "0.13.0"
percent-encoding = "2.3.1"
prost = "0.13.5"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.5"
